[package]
name = "repo"
authors = ["Mohit Singh <mohit@mohitsingh.in>"]
version = "0.8.0"
edition = "2021"
description = "Jump between repositories"
repository = "https://github.com/mohitsighs/repo"

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["cargo"] }
dirs = "5.0.1"
fuzzy-matcher = "0.3.7"
ignore = "0.4.21"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
shellexpand = "3.1.0"

[profile.release]
opt-level = 'z'
lto = true
strip = true
